pivot table builder2
还差btn的排版+row label

--- a/app/pivotbuilder.html
+++ b/app/pivotbuilder.html
@@ -18,10 +18,17 @@
             <option>4</option>
         </select>
         <select class="form-control">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
+            <option>is anything</option>
+            <option>=</option>
+            <option>></option>
+            <option>>=</option>
+            <option><</option>
+            <option><=</option>
+            <option>!=</option>
+            <option>contains</option>
+            <option>doesn't contain</option>
+            <option>is Yes</option>
+            <option>is No</option>
         </select>
         <input class="form-control">
     </div>
@@ -57,6 +64,9 @@
             <option>2</option>
         </select>
     </div>
+    <form>
+        <input type="button" class="btn btn-primary" onclick="location.href='/pivotTable';" value="Pivot Table" />
+    </form>>
 </body>
 
 </html>
