--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,18 @@
     <title>Project Phase 3</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:500,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body id="bg-img">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">INFO20002</a>
+                <p class="navbar-text">Project Phase 3 - Traffic Violations That Causes Injuries and Fatalities</p>
+            </div>
+        </div>
+    </nav>
     <div class="container">
         <h1>Traffic Violations That Causes <br>
         Injuries and Fatalities</h1>
@@ -20,6 +26,9 @@
             <input type="button" class="btn btn-primary" onclick="location.href='/visualisation';" value="Observation" />
         </form>
     </div>
+    <!-- JS Libraries -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
 </html>
