--- a/app/rawData.html
+++ b/app/rawData.html
@@ -15,6 +15,7 @@
     <a class="btn btn-info btn-back" onclick="location.href='/';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
+    <h3>Traffic Violations in New York</h3>
     <!-- Table -->
     <table class="table table-bordered table-condensed table-responsive">
         <thead>
@@ -53,6 +54,7 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <!-- Loader -->
 <script type="text/javascript">
     $(window).load(function() {
