--- a/app/ptb.html
+++ b/app/ptb.html
@@ -13,25 +13,27 @@
     <a class="btn btn-info btn-back" onclick="location.href='/';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
-    <div class="ptb-container">
+
+    <!-- Pivot table form -->
+    <form class="ptb-container" action="pivotTable" method="post">
         <h3>Pivot Table Builder</h3>
 
         <div class="row">
             <!-- Row label -->
             <div class="form-group col-md-6">
                 <label for="sel1">Row Label</label>
-                <select class="form-control selector">
-                    {% for attr in data[0] %}
-                    <option value={{attr}}>{{attr}}</option>
+                <select class="form-control selector" name="row">
+                    {% for i in range(attr_len) %}
+                    <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
                 </select>
             </div>
             <!-- Column label -->
             <div class="form-group col-md-6">
                 <label for="sel1">Column Label</label>
-                <select class="form-control selector">
-                    {% for attr in data[0] %}
-                    <option value={{attr}}>{{attr}}</option>
+                <select class="form-control selector" name="col">
+                    {% for i in range(attr_len) %}
+                    <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
                 </select>
             </div>
@@ -41,28 +43,28 @@
             <!-- Aggregation -->
             <div class="form-group col-md-6">
                 <label for="sel1">Aggregation</label>
-                <select class="form-control selector">
+                <select class="form-control selector" name="aggregation_method">
                     <option value="count">count of</option>
                     <!-- <option value="sum">sum of</option> -->
                     <option value="average">average of</option>
                     <option value="max">maximum of</option>
                     <option value="min">minimun of</option>
                 </select>
-                <select class="form-control selector">
-                    {% for attr in data[0] %}
-                    <option>{{attr}}</option>
+                <select class="form-control selector" name="aggregation_attr">
+                    {% for i in range(attr_len) %}
+                    <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
                 </select>
             </div>
             <!-- Filter -->
             <div class="form-group col-md-6">
                 <label for="sel1">Category Filter</label>
-                <select class="form-control selector">
-                    {% for attr in data[0] %}
-                    <option value={{attr}}>{{attr}}</option>
+                <select class="form-control selector" name="filter_attr">
+                    {% for i in range(attr_len) %}
+                    <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
                 </select>
-                <select class="form-control selector">
+                <select class="form-control selector" name="filter_cond">
                     <option value="">is anything</option>
                     <option value="=">=</option>
                     <option value=">">></option>
@@ -75,14 +77,14 @@
                     <option value="yes">is Yes</option>
                     <option value="no">is No</option>
                 </select>
-                <input type="text" name="filterval" class="form-control selector">
+                <input type="text" name="filter_val" class="form-control selector">
             </div>
         </div>
 
         <div class="row">
-            <input type="submit" class="btn btn-primary btn-submit" onclick="location.href='/pivotTable';" value="Create Pivot Table" />
+            <input type="submit" class="btn btn-primary btn-submit row" value="Create Pivot Table" />
         </div>
-    </div>
+    </form>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
