--- a/app/rawData.html
+++ b/app/rawData.html
@@ -17,40 +17,42 @@
     </a>
     <h3>Traffic Violations in New York</h3>
     <!-- Table -->
-    <table class="table table-bordered table-condensed table-responsive">
-        <thead>
-            <tr>
-                <th></th>
-                <th>Date Of Stop</th>
-                <th>Time Of Stop</th>
-                <th>Description</th>
-                <th>Belts</th>
-                <th>Personal Injury</th>
-                <th>Commercial License</th>
-                <th>Commercial Vehicle</th>
-                <th>Vehicle Type</th>
-                <th>Year</th>
-                <th>Make</th>
-                <th>Model</th>
-                <th>Color</th>
-                <th>Race</th>
-                <th>Gender</th>
-                <th>Geolocation</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for i in range(1,datalen) %}
-            <tr>
-                <td>{{i}}</td>
-                {% for cell in data[i] %}
-                <td>
-                    {{cell}}
-                </td>
+    <div class="table-container">
+        <table class="table table-bordered table-condensed table-responsive">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>Date Of Stop</th>
+                    <th>Time Of Stop</th>
+                    <th>Description</th>
+                    <th>Belts</th>
+                    <th>Personal Injury</th>
+                    <th>Commercial License</th>
+                    <th>Commercial Vehicle</th>
+                    <th>Vehicle Type</th>
+                    <th>Year</th>
+                    <th>Make</th>
+                    <th>Model</th>
+                    <th>Color</th>
+                    <th>Race</th>
+                    <th>Gender</th>
+                    <th>Geolocation</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for i in range(1,datalen) %}
+                <tr>
+                    <td>{{i}}</td>
+                    {% for cell in data[i] %}
+                    <td>
+                        {{cell}}
+                    </td>
+                    {% endfor %}
+                </tr>
                 {% endfor %}
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
