--- a/app/rawData.html
+++ b/app/rawData.html
@@ -23,6 +23,8 @@
                 <tr>
                     <th></th>
                     <th>Date Of Stop</th>
+                    <th>Month Of Stop</th>
+                    <th>Year Of Stop</th>
                     <th>Time Of Stop</th>
                     <th>Description</th>
                     <th>Belts</th>
