--- a/app/ptb.html
+++ b/app/ptb.html
@@ -46,7 +46,7 @@
                 <select class="form-control selector" name="aggregation_method">
                     <option value="count">count of</option>
                     <!-- <option value="sum">sum of</option> -->
-                    <option value="average">average of</option>
+                    <!-- <option value="average">average of</option> -->
                     <option value="max">maximum of</option>
                     <option value="min">minimun of</option>
                 </select>
