--- a/app/rawData.html
+++ b/app/rawData.html
@@ -26,6 +26,7 @@
                     <th>Month Of Stop</th>
                     <th>Year Of Stop</th>
                     <th>Time Of Stop</th>
+                    <th>Time Period</th>
                     <th>Description</th>
                     <th>Belts</th>
                     <th>Personal Injury</th>
@@ -38,7 +39,6 @@
                     <th>Color</th>
                     <th>Race</th>
                     <th>Gender</th>
-                    <th>Geolocation</th>
                 </tr>
             </thead>
             <tbody>
