--- a/app/pivotTable.html
+++ b/app/pivotTable.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <a class="btn btn-info btn-back" onclick="location.href='/';">
+    <a class="btn btn-info btn-back" onclick="location.href='/pivotTableBuilder';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
     <h3>Pivot Table</h3>
