--- a/app/ptb.html
+++ b/app/ptb.html
@@ -15,14 +15,14 @@
     </a>
 
     <!-- Pivot table form -->
-    <form class="ptb-container" action="pivotTable" method="post">
+    <form class="ptb-container" action="pivotTable" onsubmit="return checkInput()" method="post">
         <h3>Pivot Table Builder</h3>
 
         <div class="row">
             <!-- Row label -->
             <div class="form-group col-md-6">
                 <label for="sel1">Row Label</label>
-                <select class="form-control selector" name="row">
+                <select class="form-control selector" name="row" id="row">
                     {% for i in range(attr_len) %}
                     <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
@@ -31,7 +31,7 @@
             <!-- Column label -->
             <div class="form-group col-md-6">
                 <label for="sel1">Column Label</label>
-                <select class="form-control selector" name="col">
+                <select class="form-control selector" name="col" id="col">
                     {% for i in range(attr_len) %}
                     <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
@@ -43,14 +43,14 @@
             <!-- Aggregation -->
             <div class="form-group col-md-6">
                 <label for="sel1">Aggregation</label>
-                <select class="form-control selector" name="aggregation_method">
+                <select class="form-control selector" name="aggregation_method" id="aggregation_method">
                     <option value="count">count of</option>
                     <!-- <option value="sum">sum of</option> -->
                     <!-- <option value="average">average of</option> -->
                     <option value="max">maximum of</option>
                     <option value="min">minimun of</option>
                 </select>
-                <select class="form-control selector" name="aggregation_attr">
+                <select class="form-control selector" name="aggregation_attr" id="aggregation_attr">
                     {% for i in range(attr_len) %}
                     <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
@@ -59,12 +59,12 @@
             <!-- Filter -->
             <div class="form-group col-md-6">
                 <label for="sel1">Category Filter</label>
-                <select class="form-control selector" name="filter_attr">
+                <select class="form-control selector" name="filter_attr" id="filter_attr">
                     {% for i in range(attr_len) %}
                     <option value={{attr_trimmed[i]}}>{{attr[i]}}</option>
                     {% endfor %}
                 </select>
-                <select class="form-control selector" name="filter_cond">
+                <select class="form-control selector" name="filter_cond" id="filter_cond">
                     <option value="">is anything</option>
                     <option value="=">=</option>
                     <option value=">">></option>
@@ -77,17 +77,26 @@
                     <option value="yes">is Yes</option>
                     <option value="no">is No</option>
                 </select>
-                <input type="text" name="filter_val" class="form-control selector">
+                <input type="text" name="filter_val" class="form-control selector" id="filter_val">
             </div>
         </div>
 
+        <div class="row errmsg"></div>
         <div class="row">
-            <input type="submit" class="btn btn-primary btn-submit row" value="Create Pivot Table" />
+            <input class="btn btn-primary btn-submit row" type="submit" value="Create Pivot Table" />
         </div>
     </form>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script type="text/javascript">
+    function checkInput() {
+        if (document.getElementById("row").value=="dateofstop") {
+            alert(":D");
+            return false;
+        }
+    }
+</script>
 
 </html>
