--- a/app/rawData.html
+++ b/app/rawData.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Raw Data</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,7 +19,7 @@
     <h3>Traffic Violations in New York</h3>
     <!-- Table -->
     <div class="table-container">
-        <table class="table table-bordered table-condensed table-responsive">
+        <table class="table table-bordered table-condensed table-responsive" id="datatable">
             <thead>
                 <tr>
                     <th>#</th>
@@ -27,12 +28,12 @@
                     <th>Year Of Stop</th>
                     <th>Time Of Stop</th>
                     <th>Time Period</th>
-                    <th>Description</th>
+                    <th style="width: 230px;">Description</th>
                     <th>Belts</th>
                     <th>Personal Injury</th>
                     <th>Commercial License</th>
                     <th>Commercial Vehicle</th>
-                    <th>Vehicle Type</th>
+                    <th style="width: 100px;">Vehicle Type</th>
                     <th>Year</th>
                     <th>Make</th>
                     <th>Model</th>
@@ -42,11 +43,11 @@
                 </tr>
             </thead>
             <tbody>
-                {% for i in range(1,datalen) %}
+                {% for j in range(1, datalen) %}
                 <tr>
-                    <td>{{i}}</td>
-                    {% for cell in data[i] %}
-                    <td>
+                    <td>{{j}}</td>
+                    {% for cell in data[j] %}
+                    <td style="text-align: left;">
                         {{cell}}
                     </td>
                     {% endfor %}
@@ -58,11 +59,20 @@
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js" type="text/javascript"></script>
+<script src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js" type="text/javascript"></script>
 <!-- Loader -->
 <script type="text/javascript">
     $(window).load(function() {
         $(".loader").fadeOut("slow");
+    });
+</script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $('#datatable').DataTable({
+            "scrollX": true
+        });
     });
 </script>
 
