--- a/app/observation.html
+++ b/app/observation.html
@@ -92,7 +92,7 @@
                 <div class="col-md-6">
                     <p class="obs-text">
                         <b>Hypothesis</b>: Traffic violations tend to increase with the year goes by. <br><br>
-                        <b>Plotting</b>: The populatiton in NY since 2012 to 2016 is 8.336, 8.438, 8.491, 8.550 and 8.538 million repectively. We now use the percentage of violation against total population of NY each year, to achieve a more objective view of the trend of violation number.<br><br>
+                        <b>Plotting</b>: The population in NY since 2012 to 2016 is 8.336, 8.438, 8.491, 8.550 and 8.538 million repectively. We now use the percentage of violation against total population of NY each year, to achieve a more objective view of the trend of violation number.<br><br>
                         <b>Insight</b>: As time goes by, people seem to violate traffic rules more and more, it could be that many people start to drive, there are more new drivers who are not familiar with the road.
                 </div>
                 <div class="col-md-6">
@@ -149,7 +149,7 @@
             <div class="hypo">
                 <div class="col-md-6">
                     <p class="obs-text">
-                        <b>Hypothesis</b>: 'Women are bad drivers' stereotype is actually not true<br><br>
+                        <b>Hypothesis</b>: 'Women are bad drivers' stereotype is actually not true.<br><br>
                         <b>Insight</b>: Some could argue that there is no chart showing whether female have a less percenatge of causing fatality than male, but at least from the violation percentage, it's pretty clear that females, at least in New York, are very concious of the traffic rules.
                     </p>
                 </div>
@@ -216,7 +216,7 @@
             <div class="hypo">
                 <div class="col-md-6">
                     <p class="obs-text"> 
-                    <b>Hypothesis</b>: Traffic violations at night are more likely to cause personal injuriesborder-left-style<br><br>
+                    <b>Hypothesis</b>: Traffic violations at night are more likely to cause personal injuries. <br><br>
                         <b>Insight</b>: Bad lighting conditions at night could affect drivers' sight, which leads to possible violations. We can compare 2 peak hours: 6-7 and 17-18, the second peak hour has a large number of violations but hardly any injuries, while the first peak hour, with not so many violations, however a large number of personal injuries. The only variable between those two peak hours is daylight.
                      </p>
                 </div>
@@ -294,8 +294,8 @@
             <div class="hypo">
                 <div class="row">
                     <p class="obs-text">
-                        <b>Explantion</b>: People who violate traffic rules not because of not wearing seat belt, tend to have their seat belt unfastened<br><br>
-                        <b>Insight</b>: There are 3474 violation cases not caused by not wearing seat belt, it still contains 3381 cases without seat belt fastened. This means if you don't wear your seat belts, you are more likelt to break other traffic rules. People who have a good driving habit, fasten their seat belt every time, they probably are more likely to respect the traffic rules.
+                        <b>Explantion</b>: People who violate traffic rules not because of not wearing seat belt, tend to have their seat belt unfastened. <br><br>
+                        <b>Insight</b>: There are 3474 violation cases not caused by not wearing seat belt, it still contains 3381 cases without seat belt fastened. This means people not wearing their seat belts are more likely to break other traffic rules as well. People who have a good driving habit, fasten their seatbelts every time, probably are more likely to respect the traffic rules.
                     </p>
                 </div>
                 <div class="row">
