--- a/app/observation.html
+++ b/app/observation.html
@@ -21,7 +21,7 @@
         
     <div class="row obs-container">
         <h4>Introduction</h4>
-        <p class="intro">introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction introduction </p>
+        <p class="intro">We collected the dataset from DataMontgomery website, it contains a large range of attributes, mostly catagorical. Data processing such as error fixing, dataset simplifying is adopted, and 5 hypothesis are analyzed by visualization methods.</p>
     </div>
     
     <!-- Hypothesis 1 -->
