--- a/app/pivotTable.html
+++ b/app/pivotTable.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Raw Data</title>
+    <title>Pivot Table</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
@@ -11,17 +11,15 @@
 
 <body>
 
-    <a class="btn btn-info btn-back" onclick="location.href='/';">
+    <a class="btn btn-info btn-back" onclick="location.href='/pivotTableBuilder';">
         <i class="fa fa-reply" aria-hidden="true"></i>Back
     </a>
     <h3>Pivot Table</h3>
     <div class="row">
         <p class="ptbstr">{{ptb_str}}</p>
     </div>
-    <!-- Pivot table -->
-
-
     
+    <!-- Pivot table -->    
     <table class="table table-bordered table-condensed table-responsive">
         <thead>
             <tr>
