removed .0 in pivot table & added styling to pivot table

--- a/app/ptb.html
+++ b/app/ptb.html
@@ -65,7 +65,7 @@
                     {% endfor %}
                 </select>
                 <select class="form-control selector" name="filter_cond" id="filter_cond">
-                    <option value="">is anything</option>
+                    <option value="none">is anything</option>
                     <option value="=">=</option>
                     <option value=">">></option>
                     <option value=">=">>=</option>
