--- a/app/pivotTable.html
+++ b/app/pivotTable.html
@@ -18,46 +18,48 @@
     <div class="row">
         <p class="ptbstr">{{ptb_str}}</p>
     </div>
-    
-    <!-- Pivot table -->    
-    <table class="table table-bordered table-condensed table-responsive">
-        <thead>
-            <tr>
-                <th id="colsp_aggr">{{ val }}</th>
-            </tr>
-            <tr>
-                <th></th>
-                <th id="colsp">{{ column }}</th>
-            </tr>
-        </thead>
-        <thead>
-            <tr>
-                <th>{{ row }}</th>
-                {% for j in range(0,col_val_len) %}
-                    <th>
-                        {{ col_val[j][1] }}
-                    </th>
+
+    <!-- Pivot table -->
+    <div class="table-container">
+        <table class="table table-bordered table-condensed table-responsive">
+            <thead>
+                <tr>
+                    <th id="colsp_aggr">{{ val }}</th>
+                </tr>
+                <tr>
+                    <th></th>
+                    <th id="colsp">{{ column }}</th>
+                </tr>
+            </thead>
+            <thead>
+                <tr>
+                    <th>{{ row }}</th>
+                    {% for j in range(0,col_val_len) %}
+                        <th>
+                            {{ col_val[j][1] }}
+                        </th>
+                    {% endfor %}
+                </tr>
+            </thead>
+
+            <tbody>
+                {% for i in range(0,row_val_len) %}
+                <tr>
+                    <td>
+                        {{ row_val[i] }}
+                    </td>
+
+                    {% for k in range(0, c) %}
+                    <td>
+                        {{ aggr_a_val[i][k] }}
+                    </td>
+                    {% endfor %}
+
+                </tr>
                 {% endfor %}
-            </tr>
-        </thead>
-
-        <tbody>
-            {% for i in range(0,row_val_len) %}
-            <tr>
-                <td>
-                    {{ row_val[i] }}
-                </td>
-
-                {% for k in range(0, c) %}
-                <td>
-                    {{ aggr_a_val[i][k] }}
-                </td>
-                {% endfor %}
-
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </body>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js" type="text/javascript"></script>
