--- a/app/ptb.html
+++ b/app/ptb.html
@@ -68,9 +68,7 @@
                     <option value="none">is anything</option>
                     <option value="=">=</option>
                     <option value=">">></option>
-                    <option value=">=">>=</option>
                     <option value="<"><</option>
-                    <option value=">="><=</option>
                     <option value="!=">!=</option>
                     <option value="contains">contains</option>
                     <option value="notContain">doesn't contain</option>
@@ -108,6 +106,30 @@
             }
             if (document.getElementById("aggregation_method").value=="min") {
                 document.getElementById("errmsg").innerHTML = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong>Error: </strong>aggregation method "minimum" does not apply to non-numeric values.</div>';
+                return false;
+            }
+        }
+
+        // Filter validation
+        // Numerical filter
+        if (document.getElementById("filter_cond").value=="=" ||
+            document.getElementById("filter_cond").value==">" ||
+            document.getElementById("filter_cond").value=="<" ||
+            document.getElementById("filter_cond").value=="!=") {
+            if (document.getElementById("aggregation_attr").value!="yearofstop" &&
+                document.getElementById("aggregation_attr").value!="year") {
+                document.getElementById("errmsg").innerHTML = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong>Filter error: </strong>This filter only applies to column "Year Of Stop" or "Year".</div>';
+                return false;
+            }
+        }
+        // Yes No filter
+        if (document.getElementById("filter_cond").value=="yes" ||
+            document.getElementById("filter_cond").value=="no") {
+            if (document.getElementById("aggregation_attr").value!="belts" &&
+                document.getElementById("aggregation_attr").value!="personalinjury" &&
+                document.getElementById("aggregation_attr").value!="commerciallicense" &&
+                document.getElementById("aggregation_attr").value!="commercialvehicle") {
+                document.getElementById("errmsg").innerHTML = '<div class="alert alert-danger"><i class="fa fa-exclamation-circle" aria-hidden="true"></i><strong>Filter error: </strong>This column does not contain value "Yes" or "No".</div>';
                 return false;
             }
         }
